--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -26,7 +26,14 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
+    "glightbox": "^3.3.1",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -34,6 +41,7 @@
     "@angular/build": "^20.0.6",
     "@angular/cli": "^20.0.6",
     "@angular/compiler-cli": "^20.0.0",
+    "@angular/localize": "^20.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
@@ -42,5 +50,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.8.2"
-  }
+  },
+  "description": "This project was generated using [Angular CLI](https://github.com/angular/angular-cli) version 20.0.6.",
+  "author": "",
+  "license": "ISC"
 }
