--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "glightbox": "^3.3.1",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
