--- a/src/Frontend/angular.json
+++ b/src/Frontend/angular.json
@@ -33,7 +33,8 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/sweetalert2/dist/sweetalert2.all.min.js"
+              "node_modules/sweetalert2/dist/sweetalert2.all.min.js",
+              "node_modules/swiper/swiper-bundle.min.js"
             ]
           },
           "configurations": {
