--- a/src/Backend/PetConnect.BLL/PetConnect.BLL.csproj
+++ b/src/Backend/PetConnect.BLL/PetConnect.BLL.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\DTOs\ProductType\" />
+  </ItemGroup>
+
 </Project>
