--- a/src/Backend/PetConnect.API/PetConnect.API.csproj
+++ b/src/Backend/PetConnect.API/PetConnect.API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\PetConnect.BLL\PetConnect.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\ProductImages\" />
+  </ItemGroup>
+
 </Project>
