--- a/src/Frontend/angular.json
+++ b/src/Frontend/angular.json
@@ -23,12 +23,12 @@
               }
             ],
             "styles": [
+              "src/mat-styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/glightbox/dist/css/glightbox.min.css",
               "node_modules/swiper/swiper-bundle.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/sweetalert2/dist/sweetalert2.min.css",
-
               "src/styles.css"
             ],
             "scripts": [
