--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -20,12 +20,15 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.1.3",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.1.3",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
