--- a/src/Frontend/angular.json
+++ b/src/Frontend/angular.json
@@ -29,6 +29,7 @@
               "node_modules/swiper/swiper-bundle.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/sweetalert2/dist/sweetalert2.min.css",
+              "node_modules/@ctrl/ngx-emoji-mart/picker.css",
               "src/styles.css"
             ],
             "scripts": [
