--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -20,8 +20,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.1.3",
     "@angular/animations": "^20.1.2",
+    "@angular/cdk": "^20.1.3",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@microsoft/signalr": "^8.0.7",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.11.8",
