change folder directory

--- a/tests/PetConnect.UnitTests/PetConnect.UnitTests.csproj
+++ b/tests/PetConnect.UnitTests/PetConnect.UnitTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Backend\PetConnect.BLL\PetConnect.BLL.csproj" />
+    <ProjectReference Include="..\..\src\Backend\PetConnect.BLL\PetConnect.BLL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
