--- a/src/Backend/PetConnect.API/PetConnect.API.csproj
+++ b/src/Backend/PetConnect.API/PetConnect.API.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\assets\chatimages\" />
+    <Folder Include="wwwroot\assets\img\blogs\comments\replies\" />
   </ItemGroup>
 
 </Project>
