--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^20.0.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.2",
     "@microsoft/signalr": "^8.0.7",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.11.8",
@@ -41,6 +42,8 @@
     "glightbox": "^3.3.1",
     "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.17.0",
+    "ngx-quill": "^28.0.1",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
@@ -53,6 +56,7 @@
     "@angular/compiler-cli": "^20.0.0",
     "@angular/localize": "^20.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/quill": "^2.0.14",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
