--- a/tests/PetConnect.UnitTests/PetConnect.Tests.csproj
+++ b/tests/PetConnect.UnitTests/PetConnect.Tests.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="EntityFrameworkCoreMock.Moq" Version="2.4.0" />
     <PackageReference Include="FluentAssertions" Version="8.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.19" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.5.3" />
@@ -21,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Backend\PetConnect.API\PetConnect.API.csproj" />
     <ProjectReference Include="..\..\src\Backend\PetConnect.BLL\PetConnect.BLL.csproj" />
   </ItemGroup>
 
