--- a/src/Backend/PetConnect.BLL/PetConnect.BLL.csproj
+++ b/src/Backend/PetConnect.BLL/PetConnect.BLL.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
+    <PackageReference Include="Stripe.net" Version="48.4.0" />
   </ItemGroup>
 
 </Project>
