--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -36,6 +36,7 @@
     "@microsoft/signalr": "^8.0.7",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.11.8",
+    "@stripe/stripe-js": "^7.8.0",
     "aos": "^2.3.4",
     "apexcharts": "^5.3.2",
     "bootstrap": "^5.3.7",
