--- a/src/Backend/PetConnect.API/PetConnect.API.csproj
+++ b/src/Backend/PetConnect.API/PetConnect.API.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\assets\chatimages\" />
     <Folder Include="wwwroot\assets\img\blogs\comments\replies\" />
+    <Folder Include="wwwroot\assets\img\support\" />
   </ItemGroup>
 
 </Project>
